syntax = "proto3";

package order.v6;

option go_package = "zhadan.order.v6;orderv6";

import "google/type/decimal.proto";
import "buf/validate/validate.proto";

enum OrderStatus {
  STATUS_UNSPECIFIED = 0;
  STATUS_CREATED = 1;
  STATUS_PENDING = 2;
  STATUS_FILLED = 3;
  STATUS_CANCELLED = 4;
}

enum OrderType {
  TYPE_UNSPECIFIED = 0;
  TYPE_LIMIT = 1;
  TYPE_MARKET = 2;
  TYPE_STOP_LOSS = 3;
  TYPE_TAKE_PROFIT = 4;
}

service OrderService {
  rpc GetOrderStatus (GetOrderStatusRequest) returns (GetOrderStatusResponse);
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message GetOrderStatusRequest {
  string order_id = 1 [(buf.validate.field).string.uuid = true]; // UUID of the order to get
  string user_id = 2 [(buf.validate.field).string.uuid = true]; // UUID of the user
}

message GetOrderStatusResponse {
  OrderStatus status = 1; // Status of the order
}

message CreateOrderRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true]; // UUID of the user to create
  string market_id = 2 [(buf.validate.field).string.uuid = true]; // UUID of the market to create
  OrderType order_type = 3 [
    (buf.validate.field).enum = { defined_only: true, not_in: 0 }
  ]; // Type of the order to create
  google.type.Decimal price = 4; // Price of the order
  int64 quantity = 5 [(buf.validate.field).int64.gt = 0]; // Quantity of the order
}

message CreateOrderResponse {
  string order_id = 1; // UUID of the created order
  OrderStatus status = 2; // Status of the created order
}
